hpa-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deploy-hpa
  labels:
    app: deploy-auth-app
spec:
  template:
    metadata:
      name: my-deploy-pod
      labels:
        app: deploy-auth-app
    spec:
      containers:
        - name: nginx-cont
          image: nginx
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 200m 
              mem: 50M
            limits:
              cpu: 300m
              mem: 100M
  replicas: 2
  strategy:
     type: RollingUpdate
  selector:
    matchLabels:
      app: deploy-auth-app
