pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod3
  labels:
    app: auth-app
spec:
  containers:
    - name: my-cont1
      image: nginx
      ports:
        - containerPort: 80
