Secret.yml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-sts
  labels: 
    app: my-db-new 
spec:
  template:
    metadata:
      name: my-pod-sts
      labels:
        app: my-db-new
    spec:
      containers:
        - name: cont-db 
          image: mysql 
          ports:
            - containerPort: 3306
  replicas: 4
  selector:
    matchLabels:
      app: my-db-new

---
apiVersion: v1 
kind: Service
metadata:
  name: my-svc-sc
spec:
  type: ClusterIP
  ports:
    - targetPort: 3306
      port: 3306
      protocol: TCP 
  selector:
      app: my-db-new
