ingress-authpod.yml
apiVersion: v1
kind: Pod 
metadata: 
  name: my-pod-auth
  labels:
    app: auth-app
spec:
  containers:
    - name: my-cont-auth
      image: httpd
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: my-svc-auth
spec:
  ports:
    - targetPort: 80
      port: 80
      protocol: TCP
  selector:
    app: auth-app
  type: NodePort
