service.yml
apiVersion: v1 
kind: Service
metadata: 
  name: my-svc-new
spec:
  ports:
    - targetport: 80
      port: 80
  selector:
    app: auth-app5
  type: Nodeport
