ingress-rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: my-svc-login
            port:
              number: 80
  
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: my-svc-auth
            port:
              number: 80
    host: a88df5f9eb3694f54901fbfb22a2ec3f-349228051.us-east-1.elb.amazonaws.com
#download link of ingresscontroller :- kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.14.0/deploy/static/provider/cloud/deploy.yaml
